# enchant-rs

./: Cargo.toml  NEWS.md  README.md  shell.nix
.github/workflows/: rust.yaml
enchant-sys/: Cargo.toml  build.rs
enchant-sys/src/: lib.rs
examples/: check.rs
nix/: sources.json
src/: bindings.rs  lib.rs
tests/: 4-retain-broker.rs
